fix some spacings

--- a/src/assets/stylesheets/components/spacing.scss
+++ b/src/assets/stylesheets/components/spacing.scss
@@ -18,10 +18,6 @@
   margin-bottom: 6rem !important;
 }
 
-.mb-8 {
-  margin-bottom: 8rem !important;
-}
-
 .pb-2 {
   padding-bottom: 2rem !important;
 }
@@ -41,11 +37,7 @@
   }
 
   .mb-6 {
-    margin-bottom: 1.5rem !important;
-  }
-
-  .mb-8 {
-    margin-bottom: 2rem !important;
+    margin-bottom: 3rem !important;
   }
 }
 
@@ -56,9 +48,5 @@
 
   .mb-6 {
     margin-bottom: 3rem !important;
-  }
-
-  .mb-8 {
-    margin-bottom: 4rem !important;
   }
 }
